--- a/app/assets/css/main.less
+++ b/app/assets/css/main.less
@@ -67,7 +67,7 @@ form {margin-bottom: 0px;}
    .clearfix {margin-bottom: 5px}
    .configInput {float:left}
    label {width:55px;font-size:80%;padding-top:2px}
-   .input {margin-left:60px}
+   .input {margin-left:60px;height:24px}
    .uneditable-input{padding: 2px 5px;width: 45px}
    select.small {padding: 2px;width:65px;height:24px;}
 }
