--- a/app/views/template.scala.html
+++ b/app/views/template.scala.html
@@ -30,7 +30,13 @@
       </div>
 
       <footer>
-         <p><a href="http://playframework.com/2.0" target="_blank">Play 2.0 BETA</a> | <a href="http://mongodb.org" target="_blank">MongoDB</a> | <a href="http://nesbot.com" target="_blank">nesbot.com</a> | <a href="http://twitter.com/NesbittBrian" target="_blank">@@NesbittBrian</a> | <a href="http://github.com/briannesbitt/hockey.nesbot.com" target="_blank">github repo</a></p>
+         <p><a href="http://playframework.com/2.0" target="_blank">Play 2.0</a> |
+         <a href="http://mongodb.org" target="_blank">mongoDB</a> |
+         <a href="http://code.google.com/p/morphia/" target="_blank">morphia</a> |
+         <a href="http://twitter.github.com/bootstrap/" target="_blank">Bootstrap</a> |
+         <a href="http://nesbot.com" target="_blank">nesbot.com</a> |
+         <a href="http://twitter.com/NesbittBrian" target="_blank">@@NesbittBrian</a> |
+         <a href="http://github.com/briannesbitt/hockey.nesbot.com" target="_blank">github</a></p>
       </footer>
    </div>
 
