--- a/app/views/template.scala.html
+++ b/app/views/template.scala.html
@@ -7,6 +7,19 @@
    <link rel="stylesheet" type="text/css" media="screen" href="@routes.Assets.at("css/main.css")">
    <link rel="shortcut icon" type="image/x-icon" href="http://cdn.nhle.com/nhl/images/favicon.ico?v=5.6">
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js" type="text/javascript"></script>
+   <script type="text/javascript">
+
+     var _gaq = _gaq || [];
+     _gaq.push(['_setAccount', 'UA-27020320-2']);
+     _gaq.push(['_trackPageview']);
+
+     (function() {
+       var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+       ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+       var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+     })();
+
+   </script>
 </head>
 <body>
    <div class="topbar">
