--- a/app/views/template.scala.html
+++ b/app/views/template.scala.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-   <title>@{if(title) title else "Hockey : Crosby Art Ross Watch : My NHL"}</title>
+   <title>@{if(title) title else "Hockey : Sidney Crosby Art Ross Watch : My NHL"}</title>
    <link rel="stylesheet" href="http://twitter.github.com/bootstrap/1.4.0/bootstrap.min.css">
    <link rel="stylesheet" type="text/css" media="screen" href="@routes.Assets.at("css/main.css")">
    <link rel="shortcut icon" type="image/x-icon" href="http://cdn.nhle.com/nhl/images/favicon.ico?v=5.6">
