--- a/app/views/mynhl/dataTable.scala.html
+++ b/app/views/mynhl/dataTable.scala.html
@@ -2,12 +2,24 @@
 
 <div>
    <script type="text/javascript">
-   $(document).ready(function() {$("#@id").tablesorter({sortList: [[8,1],[2,1]]});} );
+   $(document).ready(function() {
+      $("#@id").tablesorter({sortList: [[9,1],[3,1]]});
+
+      var table = $("#@id");
+      table.bind("sortEnd",function() {
+         var i = 1;
+         table.find("tr:gt(0)").each(function(){
+            $(this).find("td:eq(0)").html(i);
+            i++;
+         });
+      }); 
+   });
    </script>
 
    <table id="@id" class="data standings zebra-striped bordered-table">
    <thead>
    <tr>
+      <th class="header">&nbsp;</th>
       <th class="header">Team</th>
       <th class="header">GP</th>
       <th class="header">W</th>
@@ -22,6 +34,7 @@
    <tbody>
    @teams.map { team =>
       <tr>
+         <td></td>
          <td class="left">@team.name</td>
          <td>@team.games</td>
          <td>@team.w</td>
